js/js.translator/testData/incremental/invalidation/addMethodToOpenClassWithConsumer/lib1/l1.1.kt
package sample

open class A {
    open fun foo(): Int = 42
    open fun baz(): Int = 1
}
